# Pola4all_2023

./: .gitignore  CMakeLists.txt  README.md  build_project.sh  install_local.sh  main.cpp  mainwindow.cpp  mainwindow.h
Docker/: Dockerfile_intel  Dockerfile_nvidia  README.md  bashrc  docker-entrypoint.sh  docker-start.sh  gitconfig  vimrc
Inc/: CameraStateCallback.hpp  CameraTypes.hpp  RosNaming.hpp
Inc/FilterOrientationsWidget/: FilterOrientationsWidget.hpp
Inc/ImageWidget/: ImageGridWidget.hpp  ImageWidget.hpp  ImagesConverter.hpp
Inc/LoadSaveWidget/: LoadSaveWidget.hpp
Inc/MatPlotLibPlotsWidget/: MatPlotLibPlotsWidget.hpp
Inc/MatPlotLibPlotsWidget/matplotlib-cpp/: matplotlibcpp.h
Inc/ParametersWidget/: ParametersWidget.hpp
Inc/PolarimetricCamera/LoadSaveExperiments/: LoadSaveExperiments.hpp
Inc/PolarimetricCamera/PixelGainCalibration/: BlackCurrentCorrection.hpp  CalibratorsHub.hpp  SourceOrientationEstimator.hpp  SuperPixelCalibration.hpp
Inc/PolarimetricCamera/PolarimetricImagesProcessing/: PolarimetricImagesProcessing.hpp
Inc/PolarimetricCamera/RosCamClient/: RosCamClient.hpp  RosHandlerSingleton.hpp
Inc/RealTimeParameters/: RealTimeParameters.hpp
Inc/SaveImagesWidget/: SaveImagesWidget.hpp
Inc/SoftwareWhiteBalance/: SoftwareWhiteBalance.hpp
Inc/VisualizationModeWidget/: VisualizationModeWidget.hpp
RosCameraServer/src/polarimetric_camera_server/: CMakeLists.txt  package.xml
RosCameraServer/src/polarimetric_camera_server/include/polarimetric_camera_server/: CameraHandler.hpp  CameraTypes.hpp  PolarimetricCameraServer.hpp  RosNaming.hpp
RosCameraServer/src/polarimetric_camera_server/include/polarimetric_camera_server/PolarimetricCamera/: IPolarimetricCamera.hpp
RosCameraServer/src/polarimetric_camera_server/include/polarimetric_camera_server/PolarimetricCamera/BaslerCamDriver/: BaslerCamDriver.hpp
RosCameraServer/src/polarimetric_camera_server/include/polarimetric_camera_server/PolarimetricCamera/TemplateDriver/: TemplateDriver.hpp
RosCameraServer/src/polarimetric_camera_server/launch/: start_camera_controller.launch  start_camera_server_legacy.launch  start_camera_server_stereo_async.launch  start_camera_server_stereo_sync.launch
RosCameraServer/src/polarimetric_camera_server/msg/: CameraStateMessage.msg
RosCameraServer/src/polarimetric_camera_server/scripts/: camera_controller.py  camera_services_names.py  extract_images_from_rosbag.py  image_widget.py  mainwindow.py  ros_comm.py  rosbag_handler.py  slider_with_label.py
RosCameraServer/src/polarimetric_camera_server/src/: CameraHandler.cpp  PolarimetricCameraServer.cpp  camera_server_main.cpp
RosCameraServer/src/polarimetric_camera_server/src/PolarimetricCamera/BaslerCamDriver/: BaslerCamDriver.cpp
RosCameraServer/src/polarimetric_camera_server/src/PolarimetricCamera/TemplateDriver/: TemplateDriver.cpp
RosCameraServer/src/polarimetric_camera_server/srv/: CameraParameters.srv  ParameterRequested.srv
Src/FilterOrientationsWidget/: FilterOrientationsWidget.cpp
Src/ImageWidget/: ImageGridWidget.cpp  ImageWidget.cpp  ImagesConverter.cpp
Src/LoadSaveWidget/: LoadSaveWidget.cpp
Src/MatPlotLibPlotsWidget/: MatPlotLibPlotsWidget.cpp
Src/ParametersWidget/: ParametersWidget.cpp
Src/PolarimetricCamera/LoadSaveExperiments/: LoadSaveExperiments.cpp
Src/PolarimetricCamera/PixelGainCalibration/: BlackCurrentCorrection.cpp  CalibratorsHub.cpp  SourceOrientationEstimator.cpp  SuperPixelCalibration.cpp
Src/PolarimetricCamera/PolarimetricImagesProcessing/: PolarimetricImagesProcessing.cpp
Src/PolarimetricCamera/RosCamClient/: RosCamClient.cpp  RosHandlerSingleton.cpp
Src/RealTimeParameters/: RealTimeParameters.cpp
Src/SaveImagesWidget/: SaveImagesWidget.cpp
Src/SoftwareWhiteBalance/: SoftwareWhiteBalance.cpp
Src/VisualizationModeWidget/: VisualizationModeWidget.cpp
